styles/styles.scss
/*-- scss:rules --*/

body {
  min-width: 400px;
  text-wrap: balance;
  text-wrap: pretty;
}


// For logo leaves
@keyframes wiggle {
  0% { rotate: 0deg; }
  10% { rotate: -2deg; }
  50% { rotate: 2deg; }
  100% { rotate: 0deg; }
} 

#banner {
  display: flex;
  width: 100%;
  margin: 0 auto -1rem;
  
  @include media-breakpoint-up(lg) {
    width: 70%;
  }
  
  svg {
    height: 100%;
    margin-bottom: 1rem;
    fill: $brand-green;
    
    #aloe1, #subtitle {
      fill: $brand-dark-green;
    }
    
    &:hover g, &:active g {
      transform-box: fill-box;
      animation: wiggle 0.4s ease 1;

      // Wiggle each in turn, rotating around (approx) the "leaf base"
      &:nth-of-type(1) {
        transform-origin: 65% 100%;
      }
      
      &:nth-of-type(2) {
        transform-origin: 25% 100%;
        animation-delay: 0.1s;
      }
      
      &:nth-of-type(3) {
        transform-origin: 0 70%;
        animation-delay: 0.2s;
      }
    }
  }
}


.quarto-about-jolla {
  margin-top: 0 !important;
}


.about-image {
  margin: 0 !important;
  padding: 1rem;
  @include highlight;
  // Don't fade, even on devices with a cursor
  opacity: 1 !important;
}


#about-me {
  width: 100%;
  background-color: $brand-green0;
  padding: 1rem;
  border-radius: 1rem;
  position: relative;
}


.about-links {
  min-width: 100%;
}

.about-link {
  width: 100%;
  text-align: center;
  color: $brand-dark-green !important;
  border: 1px solid $brand-dark-green !important;
  font-size: 1.1em !important;
  
  &:hover, &:active {
    font-weight: bold;
    border: 2px solid $brand-dark-green !important;
    margin: -1px;
  }
}


#about-me-static {
  position: absolute;
  top: 0;
  height: 100%;
  overflow: hidden;
  color: var(--bs-body-color); //fallback
  color: rgba(0, 0, 0, 0);// transparent
  padding-top: inherit;
  padding-right: inherit;
  
  p {
    margin-bottom: 1lh; // equivalent to \A in typed.css
  }
}


@import 'typed.css/typed.scss';

#intro {
  @include typed(
    "<[40]>Aloe aloe!<[10]> <[10]>I'm<[10]>.<[3]>.<[3]>.",
    (type: 0.05, pause-typed: 2.5, delete: 0.02, pause-deleted: 1),
    (
      caret-width: 2px,
      iterations: 1,
      end-on: "Hi, <[5]>I'm Claire!" +
        "<[20]>\A<[5]>\A<[20]>I'm a UK-based Freelance Medical and Scientific Writer<[5]> <[5]>with over 3 years of experience in Medical Communications<[5]> <[5]>and a passion for learning." +
        "<[5]>\A<[5]>\A<[20]>Contact me for support with your medical<[3]>,<[3]> <[5]>commercial<[5]> <[5]>and medical education deliverables<[10]>."
    )
  )
}


#email {
  background-color: $brand-green0;
  border-radius: 0 0 1rem 1rem;
  margin-top: calc(3px - 1em);
  text-align: center;
  min-width: 100%;
}
  
#email-field {
  width: 90%;
  max-width: 400px;
  margin: 1rem 0;
  display: inline-block;
  background-color: var(--bs-body-bg);
  border: 1px solid $brand-dark-green;
  border-radius: 0.5rem;
  line-height: 1.6lh;
  
  button {
    float: right;
    margin: -1px;
    border: 1px solid $brand-dark-green;
    border-radius: 0.5rem;
    width: 1lh;
    transition: background-color 1s ease-out;
    
    &:active {
      background-color: $brand-green;
      transition: none;
    }
  }
  
  span {
    a {
      color: $brand-dark-green;;
      text-decoration: none;
    }
  }
}


section {
  
  border-radius: 1rem;
  padding: 0.5rem 1rem;
  @include highlight;
  
  h3 {
    margin-top: 0.5rem;
  }
  
  // "Bold" text on hover
  // ... but use text-stroke rather than font-weight, to avoid shift due to size
  p, li {
    &:hover, &:active {
      -webkit-text-stroke: 0.6px;
      li {
        -webkit-text-stroke: 0;
        &:hover, &:active {
           -webkit-text-stroke: 0.6px;
        }
      }
    }
  }
}




#tasks {

}



#tasks-hint {
  color: $brand-green;
}

#tasks {
  
  ul {
    color: $brand-green;
    margin-bottom: 0;
    max-height: 0;
    overflow: hidden;
    transition: max-height 1s ease;
  }
  
  &:hover, &:active {
    ul {
      max-height: 500px;
    }
    
    #tasks-hint {
      color: var(--bs-body-color) !important;
    }
    
    #tasks-hint-arrow {
      display: none;
    }
  }
}


.nav-footer-center {
  min-width: 100%;
}

footer {
  padding: 0 1rem; // to match .p-3 on columns
  p {
    margin: 0;
  }
}


/*-- scss:mixins --*/

@mixin highlight {
  // Highlight visually when focused (hover on desktop, touch on mobile)
  background-color: none;
  transition: background-color 0.5s linear;
  
  &:hover, &:active {
    opacity: 1;
    background-color: $brand-green0;
  }
  
  // On devices with a cursor, reduce opacity unless hovered
  @media (pointer: fine) {
    opacity: 0.5;
    transition: opacity 0.2s linear, background-color 0.5s linear;
  }
}

